# focus

./: CMakeLists.txt  Dockerfile  README.md  compile_commands.json  docker-compose.yml
.cache/clangd/index/: crow_all.h.D52FC678CE3AD8BE.idx  main.cpp.4304208776198532.idx
.github/workflows/: ci.yml
include/: auth.h  middleware.h  tasks.h
migrations/: 001_create_tasks.sql  002_add_schedule.sql
scripts/: migrate.sh  smoke.sh
src/: auth.cpp  main.cpp  middleware.cpp  tasks.cpp
tests/: task_tests.cpp
